--- a/templates/events.html
+++ b/templates/events.html
@@ -1,6 +1,6 @@
 <h1>My Events</h1>
 <ul ng-repeat="name in eventlist">
-<li>What:{{name.name}} <br> When: {{name.date}} <br> Where: {{name.location}} <br> Host: {{name.host.name}}</li>
+<li>What:{{name.name}} <br> When: {{name.date}} <br> Where: {{name.location}} <br> Host: {{name.host.name}} <br> Full Description: {{name.description}}</li>
 </ul>
 
 <div class="row">
