--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,6 @@
-<h1>LOGIN PAGE</h1>
+
+
+<!-- LOGIN FIELDS -->
 <div class="row">
   <div class="medium-6 medium-centered large-4 large-centered columns">
 
