--- a/templates/events.html
+++ b/templates/events.html
@@ -1,4 +1,3 @@
-<h1>My Events</h1>
 <ul ng-repeat="name in eventlist">
 <li>What:{{name.name}} <br> When: {{name.date}} <br> Where: {{name.location}} <br> Host: {{name.host.name}} <br> Full Description: {{name.description}}</li>
 </ul>
@@ -34,13 +33,41 @@
 
 
 <div class="large-6 columns">
-
+<!-- event # 1 -->
 <div class="row">
 <div class="large-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]"/></div>
 <div class="large-10 columns">
-<p><strong>Some Person said:</strong> Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong.</p>
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >What:</strong>{{name.name}} </p>
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >When:</strong>{{name.date}} </p>
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >Where:</strong>{{name.location}} </p>
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >Who:</strong>{{name.host.name}} </p>
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >Full Description:</strong>{{name.description}} </p>
 <ul class="inline-list">
-<li><a href="">Reply</a></li>
+<li><a href="">Sign Up!</a></li>
+<li><a href="">Share</a></li>
+</ul>
+<h6>2 Comments</h6>
+<div class="row">
+<div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]"/></div>
+<div class="large-10 columns"><p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p></div>
+</div>
+<div class="row">
+<div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]"/></div>
+<div class="large-10 columns"><p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p></div>
+</div>
+</div>
+</div>
+<!-- ROW 2 -->
+<div class="row">
+<div class="large-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]"/></div>
+<div class="large-10 columns">
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >What:</strong>{{name.name}} </p>
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >When:</strong>{{name.date}} </p>
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >Where:</strong>{{name.location}} </p>
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >Who:</strong>{{name.host.name}} </p>
+<p ng-repeat="name in eventlist | limitTo: 1"><strong >Full Description:</strong>{{name.description}} </p>
+<ul class="inline-list">
+<li><a href="">Sign Up!</a></li>
 <li><a href="">Share</a></li>
 </ul>
 <h6>2 Comments</h6>
@@ -57,34 +84,6 @@
 
 <hr/>
 
-<div class="row">
-<div class="large-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]"/></div>
-<div class="large-10 columns">
-<p><strong>Some Person said:</strong> Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong.</p>
-<ul class="inline-list">
-<li><a href="">Reply</a></li>
-<li><a href="">Share</a></li>
-</ul>
-</div>
-</div>
-
-<hr/>
-
-<div class="row">
-<div class="large-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]"/></div>
-<div class="large-10 columns">
-<p><strong>Some Person said:</strong> Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong.</p>
-<ul class="inline-list">
-<li><a href="">Reply</a></li>
-<li><a href="">Share</a></li>
-</ul>
-<h6>2 Comments</h6>
-<div class="row">
-<div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]"/></div>
-<div class="large-10 columns"><p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p></div>
-</div>
-</div>
-</div>
 
 </div>
 
