--- a/templates/events.html
+++ b/templates/events.html
@@ -1,114 +1,53 @@
-<h1>My Events</h1>
-<ul ng-repeat="name in eventlist">
-<li>What:{{name.name}} <br> When: {{name.date}} <br> Where: {{name.location}} <br> Host: {{name.host.name}} <br> Full Description: {{name.description}}</li>
-</ul>
-
 <div class="row">
-<div class="large-12 columns">
-<div class="panel">
-<h1>Upcoming Events</h1>
-</div>
-</div>
+    <div class="large-12 columns">
+        <div class="panel">
+            <h1>Upcoming Events</h1>
+        </div>
+    </div>
 </div>
 
 <div class="row">
 
 
-<div class="large-3 columns ">
-<div class="panel">
-<a href="#"><img src="http://placehold.it/300x240&text=[img]"/></a>
-<h5><a href="#">{{username}}</a></h5>
-<div class="section-container vertical-nav" data-section data-options="deep_linking: false; one_up: true">
-<section class="section">
-<h5 class="title"><a href="#">Section 1</a></h5>
-</section>
-<section class="section">
-<h5 class="title"><a href="#">Section 2</a></h5>
-</section>
-<section class="section">
-<h5 class="title"><a href="#">Section 3</a></h5>
-</section>
-</div>
-</div>
-</div>
+    <div class="large-3 columns ">
+        <div class="panel">
+            <a href="#"><img src="http://placehold.it/300x240&text=[img]" /></a>
+            <h5><a href="#">{{username}}</a></h5>
+            <div class="section-container vertical-nav" data-section data-options="deep_linking: false; one_up: true">
+            </div>
+        </div>
+    </div>
 
 
-<div class="large-6 columns">
+    <div class="large-6 columns">
 
-<div class="row">
-<div class="large-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]"/></div>
-<div class="large-10 columns">
-<p><strong>Some Person said:</strong> Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong.</p>
-<ul class="inline-list">
-<li><a href="">Reply</a></li>
-<li><a href="">Share</a></li>
-</ul>
-<h6>2 Comments</h6>
-<div class="row">
-<div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]"/></div>
-<div class="large-10 columns"><p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p></div>
-</div>
-<div class="row">
-<div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]"/></div>
-<div class="large-10 columns"><p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p></div>
-</div>
-</div>
-</div>
+        <div ng-repeat="name in eventlist" class="row">
+            <div class="large-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]" /></div>
+            <div class="large-10 columns">
+                <p><strong>Event: {{name.name}}</strong><br>{{name.description}}</p>
+                <p><strong>When: {{name.date}}</strong></p>
+                <p><strong>Where: {{name.location}}</strong></p>
+                <p><strong>Hosted By: {{name.host.name}}</strong></p>
+                <ul class="inline-list">
+                    <li><a href="">Sign Up!</a></li>
+                    <li><a href="">Share</a></li>
+                </ul>
+                <h6>2 Comments</h6>
+                <div class="row">
+                    <div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]" /></div>
+                    <div class="large-10 columns">
+                        <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]" /></div>
+                    <div class="large-10 columns">
+                        <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<hr/>
-
-<div class="row">
-<div class="large-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]"/></div>
-<div class="large-10 columns">
-<p><strong>Some Person said:</strong> Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong.</p>
-<ul class="inline-list">
-<li><a href="">Reply</a></li>
-<li><a href="">Share</a></li>
-</ul>
+        <hr/>
+    </div>
 </div>
-</div>
-
-<hr/>
-
-<div class="row">
-<div class="large-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]"/></div>
-<div class="large-10 columns">
-<p><strong>Some Person said:</strong> Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong.</p>
-<ul class="inline-list">
-<li><a href="">Reply</a></li>
-<li><a href="">Share</a></li>
-</ul>
-<h6>2 Comments</h6>
-<div class="row">
-<div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]"/></div>
-<div class="large-10 columns"><p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p></div>
-</div>
-</div>
-</div>
-
-</div>
-
-
-
-</div>
-
-<footer class="row">
-<div class="large-12 columns">
-<hr/>
-<div class="row">
-<div class="large-5 columns">
-<p>&copy; Copyright no one at all. Go to town.</p>
-</div>
-<div class="large-7 columns">
-<ul class="inline-list right">
-<li><a href="#">Section 1</a></li>
-<li><a href="#">Section 2</a></li>
-<li><a href="#">Section 3</a></li>
-<li><a href="#">Section 4</a></li>
-<li><a href="#">Section 5</a></li>
-<li><a href="#">Section 6</a></li>
-</ul>
-</div>
-</div>
-</div>
-</footer>
