--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,17 @@
   border: 1px solid #cacaca;
   padding: 1rem;
   border-radius: 3px; }
+.top-bar {
+      background-color: #FFDCD2;
+}
+#signin {
+  background-color: #FFDCD2;
+}
+.has-submenu {
+  background-color: #FFDCD2;
+}
+.row.pagination {
+  display: inline-block;
+padding: 0;
+margin: 0;
+}
