--- a/templates/events.html
+++ b/templates/events.html
@@ -11,7 +11,7 @@
 
     <div class="large-3 columns ">
         <div class="panel">
-            <a href="#"><img src="http://placehold.it/300x240&text=[img]" /></a>
+            <a href="#"><img src="https://i.ytimg.com/vi/ImptbAtxwbM/maxresdefault.jpg" /></a>
             <h5><a href="#">{{username}}</a></h5>
             <div class="section-container vertical-nav" data-section data-options="deep_linking: false; one_up: true">
             </div>
@@ -21,31 +21,9 @@
 
     <div class="large-6 columns">
 
-        <div ng-repeat="name in eventlist" class="row">
-            <div class="large-2 columns small-3"><img src="http://placehold.it/80x80&text=[img]" /></div>
-            <div class="large-10 columns">
-                <p><strong>Event: {{name.name}}</strong><br>{{name.description}}</p>
-                <p><strong>When: {{name.date}}</strong></p>
-                <p><strong>Where: {{name.location}}</strong></p>
-                <p><strong>Hosted By: {{name.host.name}}</strong></p>
-                <ul class="inline-list">
-                    <li><a href="">Sign Up!</a></li>
-                    <li><a href="">Share</a></li>
-                </ul>
-                <h6>2 Comments</h6>
-                <div class="row">
-                    <div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]" /></div>
-                    <div class="large-10 columns">
-                        <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="large-2 columns small-3"><img src="http://placehold.it/50x50&text=[img]" /></div>
-                    <div class="large-10 columns">
-                        <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit</p>
-                    </div>
-                </div>
-            </div>
+        <div ng-repeat="title in eventlist" class="row">
+            <thingtodo info="title"></thingtodo>
+            <a href="#"></a>
         </div>
 
         <hr/>
